<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/backgroungimage"
	tools:context="com.example.nitin.massagewala.Activity.RegistrationActivity">


	<LinearLayout
		android:id="@+id/tv_registration_alreatyhaveac"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusableInTouchMode="true"
		android:gravity="center"
		android:orientation="vertical">


		<ImageView
			android:id="@+id/ib_reg_logo"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_marginBottom="60dp"
			android:layout_marginTop="60dp"
			android:scaleType="centerCrop"
			android:src="@drawable/logo" />


		<!--email edit text-->


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:background="@drawable/edittextbackbround"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:src="@drawable/email" />

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:layout_marginLeft="10dp"
				android:background="@android:color/darker_gray" />

			<EditText
				android:id="@+id/et_registration_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:background="@null"
				android:ems="10"
				android:hint="@string/email"
				android:inputType="textEmailAddress"
				android:textColor="@android:color/black" />


		</LinearLayout>

		<!-- mobile number edit text -->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:background="@drawable/edittextbackbround"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:src="@drawable/smartphone" />

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:layout_marginLeft="10dp"
				android:background="@android:color/darker_gray" />

			<EditText
				android:id="@+id/et_registration_number"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:background="@null"
				android:ems="10"
				android:hint="@string/mobile_number"
				android:inputType="phone"
				android:textColor="@android:color/black" />


		</LinearLayout>

		<!--user name edit text -->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:background="@drawable/edittextbackbround"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:src="@drawable/username" />

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:layout_marginLeft="10dp"
				android:background="@android:color/darker_gray" />

			<EditText
				android:id="@+id/et_registration_username"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:background="@null"
				android:ems="10"
				android:hint="@string/username"
				android:inputType="textPersonName"
				android:textColor="@android:color/black" />

		</LinearLayout>

		<!--password edit text -->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:background="@drawable/edittextbackbround"
			android:orientation="horizontal">

			<ImageView
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:src="@drawable/password" />

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:layout_marginLeft="10dp"
				android:background="@android:color/darker_gray" />

			<EditText
				android:id="@+id/et_registration_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:background="@null"
				android:ems="10"
				android:hint="@string/password"
				android:inputType="textPassword"
				android:textColor="@android:color/black" />
		</LinearLayout>

		<Button
			android:id="@+id/btn_registration_createaccount"
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginBottom="30dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/gradianbasecolor"
			android:text="@string/create_account"
			android:textColor="@color/white" />

		<TextView
			android:id="@+id/tv_registration_alreadyhaveaccount"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/already_have_an_account_login"
			android:textAlignment="center"
			android:textColor="@android:color/background_light" />
	</LinearLayout>


</ScrollView>
